--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
